// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider should be rendered correctly 1`] = `
<div
  aria-valuemax={100}
  aria-valuemin={1}
  aria-valuenow={50}
  className="uui-slider-container root root color-sky"
  onClick={[Function]}
  onMouseDown={[Function]}
  role="slider"
>
  <div
    className="uui-slider"
  />
  <div
    className="uui-slider-filled"
    style={
      Object {
        "width": 0,
      }
    }
  />
  <div
    className="uui-slider-scale"
  >
    <div
      className="uui-slider-scale-dot"
      style={
        Object {
          "transform": "translateX(0px)",
        }
      }
    />
    <div
      className="uui-slider-scale-number"
      style={
        Object {
          "transform": "translateX(0px)",
        }
      }
    >
      1
    </div>
    <div
      className="uui-slider-scale-dot"
      style={
        Object {
          "transform": "translateX(0px)",
        }
      }
    />
    <div
      className="uui-slider-scale-number"
      style={
        Object {
          "transform": "translateX(0px)",
        }
      }
    >
      100
    </div>
  </div>
  <div
    className="uui-slider-handle root color-sky"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "transform": "translateX(0px)",
      }
    }
    tabIndex={0}
  />
</div>
`;

exports[`Slider should be rendered correctly with extra props 1`] = `
<div
  aria-valuemax={100}
  aria-valuemin={1}
  aria-valuenow={50}
  className="uui-slider-container root root color-sun"
  onClick={[Function]}
  onMouseDown={[Function]}
  role="slider"
>
  <div
    className="uui-slider"
  />
  <div
    className="uui-slider-filled"
    style={
      Object {
        "width": 0,
      }
    }
  />
  <div
    className="uui-slider-scale"
  >
    <div
      className="uui-slider-scale-dot"
      style={
        Object {
          "transform": "translateX(0px)",
        }
      }
    />
    <div
      className="uui-slider-scale-number"
      style={
        Object {
          "transform": "translateX(0px)",
        }
      }
    >
      1
    </div>
    <div
      className="uui-slider-scale-dot"
      style={
        Object {
          "transform": "translateX(0px)",
        }
      }
    />
    <div
      className="uui-slider-scale-number"
      style={
        Object {
          "transform": "translateX(0px)",
        }
      }
    >
      100
    </div>
  </div>
  <div
    className="uui-slider-handle root color-sun"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "transform": "translateX(0px)",
      }
    }
    tabIndex={0}
  />
</div>
`;
